--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection" : "Server=localhost;Database=Toolshed;User Id=app_toolshed;Password=RS4x67ADS92;MultipleActiveResultSets=true",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
