--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "version": "0.0.0",
   "main": "client.app/app.js",
   "scripts": {
+    "prestart": "babel-node Startup.js",
     "start": "npm-run-all --parallel build_client start_web",
     "start_web": "dotnet run",
     "build_client": "webpack --config ./clientapp/webpack.config.js",
     "build_client_prod": "webpack -p --config ./clientapp/webpack.config.js"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^2.4.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
+    "figlet": "^1.2.0",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
