--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "figlet": "^1.2.0",
     "font-awesome": "^4.7.0",
+    "material-ui": "^1.0.0-beta.43",
     "npm-run-all": "^4.1.2",
     "react": "15.6.1",
     "react-dom": "15.6.1",
