--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ToolShed",
+  "name": "toolshed",
   "private": true,
   "version": "0.0.0",
   "main": "client.app/app.js",
@@ -7,28 +7,34 @@
     "prestart": "babel-node Startup.js",
     "start": "npm-run-all --parallel build_client start_web",
     "start_web": "dotnet run",
-    "build_client": "webpack --config ./clientapp/webpack.config.js",
-    "build_client_prod": "webpack -p --config ./clientapp/webpack.config.js"
+    "build_client": "webpack --watch --mode development --config ./clientapp/webpack.config.js",
+    "build_client_prod": "webpack --mode production --config ./clientapp/webpack.config.js"
+  },
+  "dependencies": {
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "font-awesome": "^4.7.0",
+    "material-ui": "^1.0.0-beta.47"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
     "figlet": "^1.2.0",
-    "font-awesome": "^4.7.0",
-    "material-ui": "^1.0.0-beta.43",
-    "npm-run-all": "^4.1.2",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
+    "file-loader": "^1.1.11",
+    "image-webpack-loader": "^4.2.0",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
+    "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^1.0.1",
-    "webpack": "^2.7.0",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3",
     "webpack-hot-middleware": "2.18.2"
   }
 }
