--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build_client_prod": "webpack --mode production --config ./clientapp/webpack.config.js"
   },
   "dependencies": {
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
     "font-awesome": "^4.7.0",
-    "material-ui": "^1.0.0-beta.47"
+    "material-ui": "^1.0.0-beta.47",
+    "normalize.css": "^8.0.0",
+    "react": "15.6.1",
+    "react-dom": "15.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -31,6 +32,7 @@
     "npm-run-all": "^4.1.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
+    "svg-inline-loader": "^0.8.0",
     "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^1.0.1",
     "webpack": "^4.7.0",
